<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="24dp">

    <ImageView
        android:id="@+id/imgUser"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/user_photo"
        android:contentDescription="@string/avatar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/etName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginTop="110dp"
        android:layout_marginBottom="51dp" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/field"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textColor="@android:color/black"
        android:fontFamily="@font/poppins_regular"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingVertical="12dp"
        app:layout_constraintTop_toBottomOf="@id/imgUser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="51dp"
        app:layout_constraintWidth_max="400dp" />

    <EditText
        android:id="@+id/etSentence"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/field"
        android:hint="@string/palindrome"
        android:inputType="text"
        android:textColor="@android:color/black"
        android:fontFamily="@font/poppins_regular"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingVertical="12dp"
        app:layout_constraintTop_toBottomOf="@id/etName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="36dp"
        app:layout_constraintWidth_max="400dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCheck"
        style="@style/SuitmediaButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/check"
        android:fontFamily="@font/poppins_medium"
        android:paddingVertical="14dp"
        app:layout_constraintTop_toBottomOf="@id/etSentence"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="45dp"
        app:layout_constraintWidth_max="400dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNext"
        style="@style/SuitmediaButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:fontFamily="@font/poppins_medium"
        android:paddingVertical="14dp"
        app:layout_constraintTop_toBottomOf="@id/btnCheck"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_max="400dp"
        android:layout_marginTop="10dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
