<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="12dp"
    android:paddingHorizontal="16dp">

    <ImageView
        android:id="@+id/imgAvatar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:scaleType="centerCrop"
        android:layout_marginEnd="12dp"
        android:contentDescription="@string/avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/firstLast"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:fontFamily="@font/poppins_semibold"
        android:layout_marginStart="18dp"
        app:layout_constraintTop_toTopOf="@id/imgAvatar"
        app:layout_constraintStart_toEndOf="@id/imgAvatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        android:ellipsize="end"
        android:maxLines="1" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="14sp"
        android:textColor="#99000000"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintTop_toBottomOf="@id/tvName"
        app:layout_constraintStart_toStartOf="@id/tvName"
        app:layout_constraintEnd_toEndOf="parent"
        android:ellipsize="end"
        android:maxLines="1"/>
    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#1A000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgAvatar"
        android:layout_marginTop="12dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
